# poloka-simfit

./: .gitignore  AUTHORS  INSTALL  README  configure.ac  poloka-lc.pc.in  wscript
doc/: poloka_to_lc.sh
poloka/: Makefile.am  fiducial.h  gausspsf.cc  gausspsf.h  lcio.cc  lcio.h  lightcurve.cc  lightcurve.h  lightcurvepoint.cc  lightcurvepoint.h  photstar.cc  photstar.h  refstar.cc  refstar.h  simfit.cc  simfit.h  simfitphot.cc  simfitvignet.cc  simfitvignet.h  vignet.cc  vignet.h  vignetphot.cc  vignetphot.h  vignetserver.cc  vignetserver.h
src/: wscript
tools/: Makefile.am  calibrate.cc  calibratefixedpos.cc  fitnight.cc  make_lightcurve.cc  modelvignet.cc  pka-lccalib.cc  pka-lcfitnight.cc  pka-lcmake.cc  pka-lcmodel.cc  wscript
